improved ResultCheckerFacade to meet the requirements and implemented ResultAnnouncerFacade