@@ -1,18 +1,22 @@
 package pl.joble.domain.resultchecker;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.ArgumentMatchers;
 import pl.joble.domain.numbergenerator.NumberGeneratorFacade;
 import pl.joble.domain.numbergenerator.dto.WinningNumbersDto;
 import pl.joble.domain.numberreciver.NumberReceiverFacade;
 import pl.joble.domain.numberreciver.dto.TicketDto;
-import pl.joble.domain.resultchecker.dto.WinnersDto;
+import pl.joble.domain.resultchecker.dto.PlayerDto;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.NoSuchElementException;
 import java.util.Set;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.*;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -24,127 +28,68 @@ class ResultCheckerFacadeTest {
             numberReceiverFacade,
             numberGeneratorFacade,
             new WinnerRepositoryTestImpl());
-    @Test
-    public void should_return_success_when_retrieved_winner(){
+    @BeforeEach
+    public void setUp(){
         //given
-        LocalDateTime localDateTime = LocalDateTime.of(2024, 11, 2, 10, 0, 0);
+        LocalDateTime localDateTime = LocalDateTime.of(2024,11,2,8,00,00);
         //when
         when(numberReceiverFacade.getNextDrawDate()).thenReturn(localDateTime);
         when(numberReceiverFacade.userNumbers(localDateTime)).thenReturn(List.of(TicketDto.builder()
-                        .numbersFromUser(Set.of(1,2,3,4,5,6))
-                        .drawDate(localDateTime)
-                        .ticketId("1")
-                .build()));
-        when(numberGeneratorFacade.generateWinningNumbers()).thenReturn(WinningNumbersDto.builder()
-                .winningNumbers(Set.of(1,2,3,4,5,6))
-                .drawDate(localDateTime)
-                .build());
-        List<WinnersDto> winnersDtos = facade.saveAllWinners();
-
-        //then
-        assertThat(winnersDtos.getFirst().message(), equalTo("Winners success to retrieve"));
-        assertThat(winnersDtos, hasSize(1));
-
-    }
-    @Test
-    public void should_return_fail_when_retrieved_winner(){
-        //given
-        LocalDateTime localDateTime = LocalDateTime.of(2024, 11, 2, 10, 0, 0);
-        //when
-        when(numberReceiverFacade.getNextDrawDate()).thenReturn(localDateTime);
-        when(numberReceiverFacade.userNumbers(localDateTime)).thenReturn(List.of(TicketDto.builder()
-                .numbersFromUser(Set.of(10,20,30,40,50,60))
-                .drawDate(localDateTime)
                 .ticketId("1")
-                .build()));
-        when(numberGeneratorFacade.generateWinningNumbers()).thenReturn(WinningNumbersDto.builder()
-                .winningNumbers(Set.of(1,2,3,4,5,6))
-                .drawDate(localDateTime)
-                .build());
-        List<WinnersDto> winnersDtos = facade.saveAllWinners();
-
-        //then
-        assertThat(winnersDtos.getFirst().message(), equalTo("Unable to retrieve a winner"));
-        assertThat(winnersDtos, hasSize(1));
-
-    }
-
-    @Test
-    public void should_save_all_winners_to_database(){
-        //given
-        LocalDateTime localDateTime = LocalDateTime.of(2024, 11, 2, 10, 0, 0);
-        //when
-        when(numberReceiverFacade.getNextDrawDate()).thenReturn(localDateTime);
-        when(numberReceiverFacade.userNumbers(localDateTime)).thenReturn(List.of(TicketDto.builder()
                 .numbersFromUser(Set.of(1,2,3,4,5,6))
                 .drawDate(localDateTime)
-                .ticketId("1")
-                .build(),
-          TicketDto.builder()
-                 .numbersFromUser(Set.of(1,2,3,4,5,6))
-                 .drawDate(localDateTime)
-                 .ticketId("2")
-                 .build()));
+                .build()));
         when(numberGeneratorFacade.generateWinningNumbers()).thenReturn(WinningNumbersDto.builder()
                 .winningNumbers(Set.of(1,2,3,4,5,6))
                 .drawDate(localDateTime)
                 .build());
-        List<WinnersDto> winnersDtos = facade.saveAllWinners();
-
-        //then
-        assertThat(winnersDtos.getFirst().message(), equalTo("Winners success to retrieve"));
-        assertThat(winnersDtos, hasSize(2));
-
     }
-
     @Test
-    public void should_returns_all_winners_by_date(){
+    public void should_returns_player_with_his_and_lottery_numbers(){
+
+
         //given
-        LocalDateTime localDateTime = LocalDateTime.of(2024, 11, 2, 10, 0, 0);
         //when
-        when(numberReceiverFacade.getNextDrawDate()).thenReturn(localDateTime);
-        when(numberGeneratorFacade.generateWinningNumbers()).thenReturn(WinningNumbersDto.builder()
-                .winningNumbers(Set.of(1,2,3,4,5,6))
-                .drawDate(localDateTime)
-                .build());
-        when(numberReceiverFacade.userNumbers(localDateTime)).thenReturn(List.of(TicketDto.builder()
-                        .numbersFromUser(Set.of(1,2,3,4,5,6))
-                        .drawDate(localDateTime)
-                        .ticketId("1")
-                        .build(),
-                TicketDto.builder()
-                        .numbersFromUser(Set.of(1,2,3,4,5,6))
-                        .drawDate(localDateTime)
-                        .ticketId("2")
-                        .build()));
-
-        facade.saveAllWinners();
-
-        List<WinnersDto> winnersDtos = facade.getWinnersByDate(localDateTime);
-
+        List<PlayerDto> playerDtos = facade.saveAllPlayers();
         //then
-        assertThat(winnersDtos, hasSize(2));
-        assertThat(winnersDtos.getFirst().drawDate(), equalTo(localDateTime));
+        assertThat(playerDtos.get(0).wonNumbers(), equalTo(playerDtos.get(0).inputtedNumbers()));
     }
-
     @Test
-    public void should_returns_empty_list_if_there_are_no_winners_for_given_date(){
-//given
-        LocalDateTime localDateTime = LocalDateTime.of(2024, 11, 2, 10, 0, 0);
+    public void should_returns_number_of_matched_numbers(){
+
+        //given
         //when
-        when(numberReceiverFacade.getNextDrawDate()).thenReturn(localDateTime);
-        when(numberGeneratorFacade.generateWinningNumbers()).thenReturn(WinningNumbersDto.builder()
-                .winningNumbers(Set.of(1,2,3,4,5,6))
-                .drawDate(localDateTime)
-                .build());
-
-        facade.saveAllWinners();
-
-        List<WinnersDto> winnersDtos = facade.getWinnersByDate(localDateTime);
-
+        List<PlayerDto> playerDtos = facade.saveAllPlayers();
         //then
-        assertThat(winnersDtos, hasSize(0));
+        assertThat(playerDtos.get(0).hitNumbers(), equalTo(6));
+    }
+    @Test
+    public void should_returns_empty_list_when_there_are_no_players(){
 
+        //given
+        //when
+        when(numberReceiverFacade.userNumbers(ArgumentMatchers.any())).thenReturn(List.of());
+        List<PlayerDto> playerDtos = facade.saveAllPlayers();
+        //then
+        assertThat(playerDtos, is(empty()));
+    }
+    @Test
+    public void should_returns_player_by_ticket_id() {
+        //given
+        //when
+        facade.saveAllPlayers();
+
+        PlayerDto byId = facade.findById("1");
+        //then
+        assertThat(byId.hitNumbers(), equalTo(6));
+        assertThat(byId.drawDate(), equalTo(LocalDateTime.of(2024,11,2,8,00,00)));
+    }
+    @Test
+    public void should_throws_exception_if_player_dose_not_exist(){
+        //given
+        //when
+        //then
+        assertThrows(TicketNotFoundException.class, () -> facade.findById("id"));
     }
 
 
